# pyNpy

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  search.json
.github/workflows/: ci-release.yml
api/: index.html
benchmark/: multithread_benchmark.md  serialisation_benchmark.md
dev/: 404.html  index.html  objects.inv
dev/api/: index.html
dev/search/: search_index.json
dev/usage/performance/: index.html
dev/usage/quickstart/: index.html
df_npy/: __init__.py  _arrays.py  _axis.py  _constants.py  _dtypes.py  _json.py  _paths.py  _serializer.py
docs/: api.md  index.md
docs/usage/: performance.md  quickstart.md
scripts/: benchmark_serialisation.py
tests/: test_integration_performance.py  test_private_helpers.py  test_serialisation.py
usage/performance/: index.html
usage/quickstart/: index.html
