[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "df-npy"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "mkdocstrings[python]>=0.30.0",
    "pre-commit>=4.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "zensical>=0.0.46",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "D", "ANN"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",
    "D",
    "E501",
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
    "performance: performance-sensitive tests",
]

[tool.hatch.build.targets.wheel]
packages = ["df_npy"]
